# Firebase Distribution (PoC)

What was new:
- First release
- Next release