@@ -6,8 +6,19 @@
 	objectVersion = 77;
 	objects = {
 
+/* Begin PBXContainerItemProxy section */
+		37C90EAE2DFBC9F7005A1049 /* PBXContainerItemProxy */ = {
+			isa = PBXContainerItemProxy;
+			containerPortal = 372E33892DFAA1BE0063F2BC /* Project object */;
+			proxyType = 1;
+			remoteGlobalIDString = 372E33902DFAA1BE0063F2BC;
+			remoteInfo = FBDistributionPoC;
+		};
+/* End PBXContainerItemProxy section */
+
 /* Begin PBXFileReference section */
 		372E33912DFAA1BE0063F2BC /* FBDistributionPoC.app */ = {isa = PBXFileReference; explicitFileType = wrapper.application; includeInIndex = 0; path = FBDistributionPoC.app; sourceTree = BUILT_PRODUCTS_DIR; };
+		37C90EAA2DFBC9F7005A1049 /* FBDistributionPoCTests.xctest */ = {isa = PBXFileReference; explicitFileType = wrapper.cfbundle; includeInIndex = 0; path = FBDistributionPoCTests.xctest; sourceTree = BUILT_PRODUCTS_DIR; };
 /* End PBXFileReference section */
 
 /* Begin PBXFileSystemSynchronizedRootGroup section */
@@ -16,10 +27,22 @@
 			path = FBDistributionPoC;
 			sourceTree = "<group>";
 		};
+		37C90EAB2DFBC9F7005A1049 /* FBDistributionPoCTests */ = {
+			isa = PBXFileSystemSynchronizedRootGroup;
+			path = FBDistributionPoCTests;
+			sourceTree = "<group>";
+		};
 /* End PBXFileSystemSynchronizedRootGroup section */
 
 /* Begin PBXFrameworksBuildPhase section */
 		372E338E2DFAA1BE0063F2BC /* Frameworks */ = {
+			isa = PBXFrameworksBuildPhase;
+			buildActionMask = 2147483647;
+			files = (
+			);
+			runOnlyForDeploymentPostprocessing = 0;
+		};
+		37C90EA72DFBC9F7005A1049 /* Frameworks */ = {
 			isa = PBXFrameworksBuildPhase;
 			buildActionMask = 2147483647;
 			files = (
@@ -33,6 +56,7 @@
 			isa = PBXGroup;
 			children = (
 				372E33932DFAA1BE0063F2BC /* FBDistributionPoC */,
+				37C90EAB2DFBC9F7005A1049 /* FBDistributionPoCTests */,
 				372E33922DFAA1BE0063F2BC /* Products */,
 			);
 			sourceTree = "<group>";
@@ -41,6 +65,7 @@
 			isa = PBXGroup;
 			children = (
 				372E33912DFAA1BE0063F2BC /* FBDistributionPoC.app */,
+				37C90EAA2DFBC9F7005A1049 /* FBDistributionPoCTests.xctest */,
 			);
 			name = Products;
 			sourceTree = "<group>";
@@ -70,6 +95,29 @@
 			productReference = 372E33912DFAA1BE0063F2BC /* FBDistributionPoC.app */;
 			productType = "com.apple.product-type.application";
 		};
+		37C90EA92DFBC9F7005A1049 /* FBDistributionPoCTests */ = {
+			isa = PBXNativeTarget;
+			buildConfigurationList = 37C90EB22DFBC9F7005A1049 /* Build configuration list for PBXNativeTarget "FBDistributionPoCTests" */;
+			buildPhases = (
+				37C90EA62DFBC9F7005A1049 /* Sources */,
+				37C90EA72DFBC9F7005A1049 /* Frameworks */,
+				37C90EA82DFBC9F7005A1049 /* Resources */,
+			);
+			buildRules = (
+			);
+			dependencies = (
+				37C90EAF2DFBC9F7005A1049 /* PBXTargetDependency */,
+			);
+			fileSystemSynchronizedGroups = (
+				37C90EAB2DFBC9F7005A1049 /* FBDistributionPoCTests */,
+			);
+			name = FBDistributionPoCTests;
+			packageProductDependencies = (
+			);
+			productName = FBDistributionPoCTests;
+			productReference = 37C90EAA2DFBC9F7005A1049 /* FBDistributionPoCTests.xctest */;
+			productType = "com.apple.product-type.bundle.unit-test";
+		};
 /* End PBXNativeTarget section */
 
 /* Begin PBXProject section */
@@ -82,6 +130,10 @@
 				TargetAttributes = {
 					372E33902DFAA1BE0063F2BC = {
 						CreatedOnToolsVersion = 16.4;
+					};
+					37C90EA92DFBC9F7005A1049 = {
+						CreatedOnToolsVersion = 16.4;
+						TestTargetID = 372E33902DFAA1BE0063F2BC;
 					};
 				};
 			};
@@ -100,12 +152,20 @@
 			projectRoot = "";
 			targets = (
 				372E33902DFAA1BE0063F2BC /* FBDistributionPoC */,
+				37C90EA92DFBC9F7005A1049 /* FBDistributionPoCTests */,
 			);
 		};
 /* End PBXProject section */
 
 /* Begin PBXResourcesBuildPhase section */
 		372E338F2DFAA1BE0063F2BC /* Resources */ = {
+			isa = PBXResourcesBuildPhase;
+			buildActionMask = 2147483647;
+			files = (
+			);
+			runOnlyForDeploymentPostprocessing = 0;
+		};
+		37C90EA82DFBC9F7005A1049 /* Resources */ = {
 			isa = PBXResourcesBuildPhase;
 			buildActionMask = 2147483647;
 			files = (
@@ -122,7 +182,22 @@
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
+		37C90EA62DFBC9F7005A1049 /* Sources */ = {
+			isa = PBXSourcesBuildPhase;
+			buildActionMask = 2147483647;
+			files = (
+			);
+			runOnlyForDeploymentPostprocessing = 0;
+		};
 /* End PBXSourcesBuildPhase section */
+
+/* Begin PBXTargetDependency section */
+		37C90EAF2DFBC9F7005A1049 /* PBXTargetDependency */ = {
+			isa = PBXTargetDependency;
+			target = 372E33902DFAA1BE0063F2BC /* FBDistributionPoC */;
+			targetProxy = 37C90EAE2DFBC9F7005A1049 /* PBXContainerItemProxy */;
+		};
+/* End PBXTargetDependency section */
 
 /* Begin XCBuildConfiguration section */
 		372E339A2DFAA1C00063F2BC /* Debug */ = {
@@ -310,6 +385,42 @@
 			};
 			name = Release;
 		};
+		37C90EB02DFBC9F7005A1049 /* Debug */ = {
+			isa = XCBuildConfiguration;
+			buildSettings = {
+				BUNDLE_LOADER = "$(TEST_HOST)";
+				CODE_SIGN_STYLE = Automatic;
+				CURRENT_PROJECT_VERSION = 1;
+				DEVELOPMENT_TEAM = 6FJ8MX2K25;
+				GENERATE_INFOPLIST_FILE = YES;
+				MARKETING_VERSION = 1.0;
+				PRODUCT_BUNDLE_IDENTIFIER = com.oleksa.FBDistributionPoCTests;
+				PRODUCT_NAME = "$(TARGET_NAME)";
+				SWIFT_EMIT_LOC_STRINGS = NO;
+				SWIFT_VERSION = 5.0;
+				TARGETED_DEVICE_FAMILY = "1,2";
+				TEST_HOST = "$(BUILT_PRODUCTS_DIR)/FBDistributionPoC.app/$(BUNDLE_EXECUTABLE_FOLDER_PATH)/FBDistributionPoC";
+			};
+			name = Debug;
+		};
+		37C90EB12DFBC9F7005A1049 /* Release */ = {
+			isa = XCBuildConfiguration;
+			buildSettings = {
+				BUNDLE_LOADER = "$(TEST_HOST)";
+				CODE_SIGN_STYLE = Automatic;
+				CURRENT_PROJECT_VERSION = 1;
+				DEVELOPMENT_TEAM = 6FJ8MX2K25;
+				GENERATE_INFOPLIST_FILE = YES;
+				MARKETING_VERSION = 1.0;
+				PRODUCT_BUNDLE_IDENTIFIER = com.oleksa.FBDistributionPoCTests;
+				PRODUCT_NAME = "$(TARGET_NAME)";
+				SWIFT_EMIT_LOC_STRINGS = NO;
+				SWIFT_VERSION = 5.0;
+				TARGETED_DEVICE_FAMILY = "1,2";
+				TEST_HOST = "$(BUILT_PRODUCTS_DIR)/FBDistributionPoC.app/$(BUNDLE_EXECUTABLE_FOLDER_PATH)/FBDistributionPoC";
+			};
+			name = Release;
+		};
 /* End XCBuildConfiguration section */
 
 /* Begin XCConfigurationList section */
@@ -327,6 +438,15 @@
 			buildConfigurations = (
 				372E339D2DFAA1C00063F2BC /* Debug */,
 				372E339E2DFAA1C00063F2BC /* Release */,
+			);
+			defaultConfigurationIsVisible = 0;
+			defaultConfigurationName = Release;
+		};
+		37C90EB22DFBC9F7005A1049 /* Build configuration list for PBXNativeTarget "FBDistributionPoCTests" */ = {
+			isa = XCConfigurationList;
+			buildConfigurations = (
+				37C90EB02DFBC9F7005A1049 /* Debug */,
+				37C90EB12DFBC9F7005A1049 /* Release */,
 			);
 			defaultConfigurationIsVisible = 0;
 			defaultConfigurationName = Release;
