@@ -11,7 +11,7 @@ import SwiftUI
 struct TheApp: App {
     var body: some Scene {
         WindowGroup {
-            ContentView()
+            ContentView(model: ContentViewModel())
         }
     }
 }
