@@ -1,0 +1,15 @@
+//
+//  FBDistributionPoCTests.swift
+//  FBDistributionPoCTests
+//
+//  Created by Oleksandr Karpenko on 13.06.2025.
+//
+
+import Testing
+
+struct FBDistributionPoCTests {
+
+    @Test func testExample() async throws {
+        #expect(2 + 2 == 4)
+    }
+}
