@@ -1,3 +1,5 @@
+# Versioning routines
+
 # MARKETING_VERSION = CFBundleShortVersionString (e.g., 1.2.3)
 # CURRENT_PROJECT_VERSION = CFBundleVersion (e.g., 42)
 CONFIG_FILE := ./FBDistributionPoC/Config.xcconfig
@@ -5,13 +7,13 @@ CONFIG_FILE := ./FBDistributionPoC/Config.xcconfig
 .PHONY: v-get v-inc-build v-inc-patch v-inc-minor
 
 # Get the current version of the application (stored in the $PROJECT/Confog.xcconfig
-v-get:
+ver-get:
 	@VERSION=$$(grep '^VERSION' $(CONFIG_FILE) | cut -d= -f2 | tr -d ' '); \
 	BUILD=$$(grep '^BUILD_NUMBER' $(CONFIG_FILE) | cut -d= -f2 | tr -d ' '); \
 	echo "Current version: $$VERSION ($$BUILD)"
 
 # Increase the BUILD number, no push to repository
-v-inc-build:
+ver-inc-build:
 	@BUILD=$$(grep '^BUILD_NUMBER' $(CONFIG_FILE) | cut -d= -f2 | tr -d ' '); \
 	NEW_BUILD=$$((BUILD + 1)); \
 	sed -i '' "s/^BUILD_NUMBER = .*/BUILD_NUMBER = $$NEW_BUILD/" $(CONFIG_FILE); \
@@ -22,7 +24,7 @@ v-inc-build:
 
 
 # Increase the PATCH version, no push to repository
-v-inc-patch:
+ver-inc-patch:
 	@VERSION=$$(grep '^VERSION' $(CONFIG_FILE) | cut -d= -f2 | tr -d ' '); \
 	MAJOR=$$(echo $$VERSION | cut -d. -f1); \
 	MINOR=$$(echo $$VERSION | cut -d. -f2); \
@@ -34,7 +36,7 @@ v-inc-patch:
 
 
 # Increase the MINOR version, no push to repository
-v-inc-minor:
+ver-inc-minor:
 	@VERSION=$$(grep '^VERSION' $(CONFIG_FILE) | cut -d= -f2 | tr -d ' '); \
 	MAJOR=$$(echo $$VERSION | cut -d. -f1); \
 	MINOR=$$(echo $$VERSION | cut -d. -f2); \
